fixed scrollbar

--- a/css/darkmode.css
+++ b/css/darkmode.css
@@ -1,10 +1,19 @@
+html {
+    --lightAreaPrimary: #574869;
+    --greyAreaPrimary: #322f3c;
+    --buttonPrimary: #38244e;
+    --buttonTextPrimary: #b59cd2;
+    --activeTextPrimary: #8c4cd4;
+    --scrollbarBackground: #61556f;
+    --scrollbarThumb: #362e40;
+}
 
 body {
     color: #AAAAAA;
     background: #1C1C1C;
 }
 a {
-    color: #8c4cd4;
+    color: var(--activeTextPrimary);
     text-decoration: none;
 }
 
@@ -22,8 +31,8 @@ a {
 }
 
 button {
-    background-color: #38244e;
-    color: #b59cd2;
+    background-color: var(--buttonPrimary);
+    color: var(--buttonTextPrimary);
     border: none;
     padding: 0.5em 1.8em;
     border-radius: 3px;
@@ -40,13 +49,13 @@ input {
 #sc-pnav button,
 #sc-pnav button.sm,
 #sc-artwkctrls .cntrls button {
-    background-color: #38244e;
-    color: #b59cd2;
+    background-color: var(--buttonPrimary);
+    color: var(--buttonTextPrimary);
     border: none;
 }
 
 #sc-tabs {
-    background-color: #574869;
+    background-color: var(--lightAreaPrimary);
 }
 
 #sc-playlist {
@@ -56,6 +65,23 @@ input {
 #sc-playlist .item.playing,
 #sc-playlist .item.active,
 #sc-playlist .item:hover, #sc-playlist .item:active {
-    background-color: #322f3c;
+    background-color: var(--greyAreaPrimary);
     color: #CCC;
+}
+
+
+*::-webkit-scrollbar {
+    width: 12px;
+}
+* {
+    scrollbar-width: thin;
+    scrollbar-color: var(--scrollbarThumb) var(--scrollbarBackground);
+}
+*::-webkit-scrollbar-track {
+    background: var(--scrollbarBackground);
+}
+*::-webkit-scrollbar-thumb {
+    background-color: var(--scrollbarThumb) ;
+    border-radius: 6px;
+    border: 3px solid var(--scrollbarBackground);
 }
